--- a/backend/package.json
+++ b/backend/package.json
@@ -22,21 +22,19 @@
   },
   "homepage": "https://github.com/TPedriz/KinhoBarber#readme",
   "dependencies": {
-    "express": "^5.1.0",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
-  "devDependencies": { 
-    "prisma": "^6.9.0",
-    "nodemon": "^3.1.2"
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.12.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
   }
-  
-
 }
